Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4867

Race condition in RefCountCacheSerializer Initialization

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • None
    • HostDB
    • None

    Description

      Right now the serializer task is scheduled before one of the class members is initialized-- which means we have a race between the next line running and the eventProcessor scheduling+executing the task.

      Thanks to jaaju for catching it!

      Attachments

        Issue Links

          Activity

            People

              jacksontj Thomas Jackson
              jacksontj Thomas Jackson
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h