TS-4867: Only schedule the serializer after we have completely finished initializing

Otherwise there is a race between initialization and the eventProcessor